# gpurt

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGPURT.cmake  GenerateOpenCL.cmake
include/: CLgpu.h  CUDAgpu.h  Check.h  DeviceCode.h  GPU.h  OpenCL.cpp.in
src/: CLgpu.cpp  CUDAgpu.cu  GPU.cpp  OpenCL.cpp.in  getRawPointer.cl  maxConcurrentBlockEval.cl
src/test/: gpurt.cpp
